--- a/css/style.css
+++ b/css/style.css
@@ -476,12 +476,23 @@ h3, label {
 }
 
 .forgot-password a {
-	color: #167bff;
+	color: #B9594B;
 }
 
 .btn-primary {
 	color: #fff;
 	border-color: none !important;
+	background-color: #B9594B;
+}
+
+.btn-primary:hover {
+	background-color: #95453a;
+}
+
+.contact-title {
+	margin-bottom: 30px;
+	font-size: 3.5rem;
+	font-weight: bold;
 }
 
 .contact-comment {
@@ -491,4 +502,21 @@ h3, label {
 .contact-content {
 	float: none;
 	animation-delay: 1s;
+}
+
+.contact-links {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	width: 50%;
+}
+
+.contact-logo {
+	width: 50px;
+	height: 50px;
+	object-fit: contain;
+	background: transparent;
+	margin: 10px;
+	text-align: center;
+	padding: 1px;
 }
